<resources>
    <string name="arg">Core32</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110001">Navigate home</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110002">Navigate up</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110003">More options</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110004">Done</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110005">See all</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110006">Choose an app</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110007">OFF</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110008">ON</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110009">Alt+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11000a">Ctrl+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11000b">delete</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11000c">enter</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11000d">Function+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11000e">Meta+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11000f">Shift+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110010">space</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110011">Sym+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110012">Menu+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110013">Search…</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110014">Clear query</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110015">Search query</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110016">Search</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110017">Submit query</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110018">Voice search</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110019">Share with</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11001a">Share with %s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11001b">Collapse</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11001c">SoccerKing</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11001d">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11001e">:assist</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11001f">Core32</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110020">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110021">Expand halfway</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110022">Core32</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110023">CANCEL</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110024">Characters entered %1$d of %2$d</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110025">Character limit exceeded %1$d of %2$d</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110026">%1$d/%2$d</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110027">Chip text</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110028">Clear text</string>
    <string name="com.crashlytics.android.build_id">42050280d2ba4c478033a3979d0f50d2</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11002a">Enable</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11002b">"%1$s won't work unless you enable Google Play services."</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11002c">Enable Google Play services</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11002d">Install</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11002e">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11002f">Get Google Play services</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110030">Google Play services availability</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110031">Google Play services error</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110032">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110033">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110034">Update</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110035">"%1$s won't run unless you update Google Play services."</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110036">Update Google Play services</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110037">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110038">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110039">Open on phone</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11003a">Sign in</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11003b">Sign in with Google</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11003c">DOWNLOAD</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11003d">Error</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11003e">Show dropdown menu</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11003f">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110040">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="gcm_defaultSenderId">764928138752</string>
    <string name="google_api_key">AIzaSyAGsS5RGtzdQswMJQDrjw-2pLidwvYZ-VI</string>
    <string name="google_app_id">1:764928138752:android:b31c6f8c4083e9ae7f82e5</string>
    <string name="google_crash_reporting_api_key">AIzaSyAGsS5RGtzdQswMJQDrjw-2pLidwvYZ-VI</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110046">soccerking-01.firebasestorage.app</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110047">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110048">Dialog Icon</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110049">Install Agent Apk</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11004a">INSALL SOCCER STARS</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11004b">Tab</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11004c">:</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11004d">Select AM or PM</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11004e">Select hour</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11004f">"%1$s o'clock"</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110050">Select minutes</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110051">%1$s minutes</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110052">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110053">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110054">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110055">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110056">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110057">Range end,</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110058">Range start,</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110059">AM</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11005a">Switch to clock mode for the time input.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11005b">Hour</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11005c">Minute</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11005d">PM</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11005e">Select time</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11005f">Switch to text input mode for the time input.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110060">New notification</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110061">Remove %1$s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110062">More than %1$d new notifications</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110063">%1$d%2$s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110064">Change to next month</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110065">Change to previous month</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110066">Current selection: %1$s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110067">@android:string/cancel</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110068">@android:string/ok</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110069">%1$s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11006a">Select Date</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11006b">Selected date</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11006c">Column of days: %1$s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11006d">Invalid format.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11006e">Example: %1$s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11006f">Use: %1$s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110070">Invalid range.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110071">Navigate to year %1$s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110072">Out of range: %1$s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110073">Start date – %1$s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110074">%1$s – End date</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110075">%1$s – %2$s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110076">Select Range</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110077">Start date – End date</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110078">Save</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110079">Date</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11007a">End date</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11007b">Start date</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11007c">d</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11007d">m</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11007e">y</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11007f">Switch to calendar input mode</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110080">Tap to switch to selecting a day</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110081">Switch to text input mode</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110082">Tap to switch to selecting a year</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110083">%1$s is running</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110084">Ensure %1$s can receive msg</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110085">http://aimassists.com</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110086">Show password</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f110087">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f11008c">To support google payment, please click &lt;font color=#165ae5>CONTINUE&lt;/font> Install the Agent App, Then restart SoccerKing</string>
</resources>