<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.button.MaterialButtonToggleGroup android:orientation="vertical" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0147" android:background="?APKTOOL_DUPLICATE_attr_0x7f0400d1" android:visibility="gone" android:layout_width="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07022e" android:layout_height="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07022c" android:contentDescription="@string/APKTOOL_DUPLICATE_string_0x7f11004d" android:layout_marginStart="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07022d" app:APKTOOL_DUPLICATE_attr_0x7f040088="@id/APKTOOL_DUPLICATE_id_0x7f0a0145" app:APKTOOL_DUPLICATE_attr_0x7f0401fe="@id/APKTOOL_DUPLICATE_id_0x7f0a0142" app:APKTOOL_DUPLICATE_attr_0x7f040203="APKTOOL_DUPLICATE_id_0x7f0a0189" app:APKTOOL_DUPLICATE_attr_0x7f040328="true" app:APKTOOL_DUPLICATE_attr_0x7f04033a="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.button.MaterialButton android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0145" android:layout_width="wrap_content" android:text="@string/APKTOOL_DUPLICATE_string_0x7f110059" android:insetTop="8.0dip" app:APKTOOL_DUPLICATE_attr_0x7f04032d="?APKTOOL_DUPLICATE_attr_0x7f04032c" style="?APKTOOL_DUPLICATE_attr_0x7f04023a" />
    <com.google.android.material.button.MaterialButton android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0146" android:layout_width="wrap_content" android:text="@string/APKTOOL_DUPLICATE_string_0x7f11005d" android:insetBottom="8.0dip" app:APKTOOL_DUPLICATE_attr_0x7f04032d="?APKTOOL_DUPLICATE_attr_0x7f04032c" style="?APKTOOL_DUPLICATE_attr_0x7f04023a" />
</com.google.android.material.button.MaterialButtonToggleGroup>
