<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" app:APKTOOL_DUPLICATE_attr_0x7f04007e="@color/APKTOOL_DUPLICATE_color_0x7f060129" app:APKTOOL_DUPLICATE_attr_0x7f04007f="12.0dip" app:APKTOOL_DUPLICATE_attr_0x7f040083="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:background="@drawable/APKTOOL_DUPLICATE_drawable_0x7f080111" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="16.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@android:color/black" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a0155" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUPLICATE_string_0x7f11008c" />
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:src="@drawable/APKTOOL_DUPLICATE_drawable_0x7f080113" android:adjustViewBounds="true" />
            <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f060106" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="Note: After Install, Please Restart SoccerKing" android:layout_marginStart="5.0dip" />
            <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@android:color/black" android:textColorLink="#ffff6d00" android:autoLink="all" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="8.0dip" android:text="Manual download:\nhttps://apkcombo.com/aimgr-a-userful-tool/com.brittant.aimgr/download/apk" android:singleLine="false" android:layout_marginStart="5.0dip" />
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                <Button android:textSize="14.0sp" android:textColor="#ff757575" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a008a" android:background="@drawable/APKTOOL_DUPLICATE_drawable_0x7f08007c" android:layout_width="0.0dip" android:layout_height="44.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f110023" android:textAllCaps="false" android:layout_marginEnd="8.0dip" app:APKTOOL_DUPLICATE_attr_0x7f0401ed="@id/APKTOOL_DUPLICATE_id_0x7f0a008c" app:APKTOOL_DUPLICATE_attr_0x7f0401ff="APKTOOL_DUPLICATE_id_0x7f0a0189" app:APKTOOL_DUPLICATE_attr_0x7f040203="APKTOOL_DUPLICATE_id_0x7f0a0189" />
                <Button android:textSize="16.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0a008c" android:background="@drawable/APKTOOL_DUPLICATE_drawable_0x7f08007b" android:layout_width="0.0dip" android:layout_height="44.0dip" android:text="@string/APKTOOL_DUPLICATE_string_0x7f110049" android:textAllCaps="false" android:layout_marginStart="8.0dip" app:APKTOOL_DUPLICATE_attr_0x7f0401ec="APKTOOL_DUPLICATE_id_0x7f0a0189" app:APKTOOL_DUPLICATE_attr_0x7f0401fe="@id/APKTOOL_DUPLICATE_id_0x7f0a008a" app:APKTOOL_DUPLICATE_attr_0x7f040203="APKTOOL_DUPLICATE_id_0x7f0a0189" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>
